--- a/index.html
+++ b/index.html
@@ -6,33 +6,14 @@
   <!-- Biblioteca PapaParse para ler CSV -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-    }
-    h2 {
-      margin-top: 30px;
-    }
-    table {
-      border-collapse: collapse;
-      margin-top: 10px;
-      width: 80%;
-    }
-    th, td {
-      border: 1px solid #ccc;
-      padding: 8px;
-      text-align: center;
-    }
-    th {
-      background-color: #f4f4f4;
-    }
-    .container {
-      margin-bottom: 30px;
-    }
-    button {
-      margin-top: 10px;
-      margin-right: 10px;
-    }
+    body { font-family: Arial, sans-serif; margin: 20px; }
+    h2 { margin-top: 30px; }
+    table { border-collapse: collapse; margin-top: 10px; width: 80%; }
+    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
+    th { background-color: #f4f4f4; }
+    .container { margin-bottom: 30px; }
+    button { margin-top: 10px; margin-right: 10px; }
+    .update-panel { border: 1px solid #ccc; padding: 10px; width: 80%; margin-bottom: 30px; }
   </style>
 </head>
 <body>
@@ -58,19 +39,35 @@
         <th>Coluna 5</th>
         <th>Coluna 9</th>
         <th>Novo Código</th>
+        <th>Novo Código 2</th>
       </tr>
     </thead>
     <tbody></tbody>
   </table>
 
-  <div class="container">
-    <!-- Botões para exportar Tabela Resumo -->
-    <button onclick="exportCSVSummary()">Exportar CSV (Resumo)</button>
-    <button onclick="exportXLSSummary()">Exportar XLS (Resumo)</button>
-    <button onclick="copySummaryTable()">Copiar Resumo (para Notion)</button>
+  <!-- Painel para atualizar a Coluna 9 -->
+  <div class="update-panel">
+    <h3>Atualizar Coluna 9</h3>
+    <label for="col9Option">Selecione a opção: </label>
+    <select id="col9Option">
+      <option value="MAR - CEY - CEY">MAR - CEY - CEY</option>
+      <option value="MAR - ROB - ROB">MAR - ROB - ROB</option>
+    </select>
+    &nbsp;&nbsp;
+    <label for="col9Color">Cor (HEX ou nome): </label>
+    <input type="text" id="col9Color" placeholder="#ff0000 ou red">
+    &nbsp;&nbsp;
+    <button onclick="updateCol9()">Confirmar Atualização</button>
   </div>
 
-  <h2>Resumo de Códigos</h2>
+  <!-- Botões para exportar a Tabela Resumo (Planilha 1 – contagem dos códigos da coluna 4) -->
+  <div class="container">
+    <button onclick="exportCSVSummary()">Exportar CSV (Resumo 1)</button>
+    <button onclick="exportXLSSummary()">Exportar XLS (Resumo 1)</button>
+    <button onclick="copySummaryTable()">Copiar Resumo 1 (para Notion)</button>
+  </div>
+
+  <h2>Resumo de Códigos (Coluna 4)</h2>
   <table id="summaryTable">
     <thead>
       <tr>
@@ -81,12 +78,31 @@
     <tbody></tbody>
   </table>
 
+  <!-- Botões para exportar a Tabela Resumo 2 (Planilha 2 – contagem dos códigos gerados da coluna 3) -->
+  <div class="container">
+    <button onclick="exportCSVSummary2()">Exportar CSV (Resumo 2)</button>
+    <button onclick="exportXLSSummary2()">Exportar XLS (Resumo 2)</button>
+    <button onclick="copySummaryTable2()">Copiar Resumo 2 (para Notion)</button>
+  </div>
+
+  <h2>Resumo de Códigos (Coluna 3 - Novo Código 2)</h2>
+  <table id="summaryTable2">
+    <thead>
+      <tr>
+        <th>Tipo</th>
+        <th>Quantidade</th>
+      </tr>
+    </thead>
+    <tbody></tbody>
+  </table>
+
   <script>
     let processedData = []; // Dados da Planilha 1
-    const summaryCounts = {}; // Contagem dos códigos
+    const summaryCounts = {}; // Contagem dos códigos derivados da coluna 4 (Novo Código)
+    const summaryCounts2 = {}; // Contagem dos códigos derivados da coluna 3 (Novo Código 2)
     let totalItens = 0;     // Soma dos valores da 8ª coluna (índice 7 do CSV)
 
-    // Função para determinar o novo código com base na coluna 4
+    // Função para determinar o Novo Código (a partir da Coluna 4)
     function getCodigo(texto) {
       const str = texto.toLowerCase();
       if (str.includes("fixo")) {
@@ -117,6 +133,21 @@
       return "";
     }
 
+    // Função para determinar o Novo Código 2 (a partir da Coluna 3)
+    function getCodigo2(texto) {
+      const str = texto.toLowerCase();
+      if (str.includes("gol")) {
+        return "Aluminio";
+      } else if (str.includes("rip")) {
+        return "Ripado";
+      } else if (str.includes("brise")) {
+        return "Brise";
+      } else if (str.includes("acm") || str.includes("layer")) {
+        return "Layer";
+      }
+      return "PVC";
+    }
+
     // Ao selecionar o arquivo CSV
     document.getElementById('csvFile').addEventListener('change', function(e) {
       const file = e.target.files[0];
@@ -125,40 +156,37 @@
       Papa.parse(file, {
         complete: function(results) {
           processedData = [];
-          // Reinicia contagens
-          for (let key in summaryCounts) {
-            delete summaryCounts[key];
-          }
+          // Reinicia as contagens
+          for (let key in summaryCounts) { delete summaryCounts[key]; }
+          for (let key in summaryCounts2) { delete summaryCounts2[key]; }
           totalItens = 0;
           const rows = results.data;
-          // Processar cada linha (pula linhas com poucos dados)
+          // Processar cada linha (pular linhas com poucos dados)
           rows.forEach(row => {
             if (!row || row.length < 9) return;
             // Mantém as colunas: 1,2,3,4,5,9 (índices: 0,1,2,3,4,8)
             const selected = [row[0], row[1], row[2], row[3], row[4], row[8]];
             const codigo = getCodigo(row[3] || "");
-            const newRow = selected.concat(codigo);
+            const codigo2 = getCodigo2(row[2] || "");
+            const newRow = selected.concat(codigo, codigo2);
             processedData.push(newRow);
-            // Atualiza contagem do código
-            if (codigo) {
-              summaryCounts[codigo] = (summaryCounts[codigo] || 0) + 1;
-            }
+            // Atualiza contagem do Novo Código (coluna 4)
+            if (codigo) { summaryCounts[codigo] = (summaryCounts[codigo] || 0) + 1; }
+            // Atualiza contagem do Novo Código 2 (coluna 3)
+            summaryCounts2[codigo2] = (summaryCounts2[codigo2] || 0) + 1;
             // Soma a quantidade total usando a 8ª coluna (índice 7)
             let quantidade = Number(row[7].replace(",","."));
-            if (!isNaN(quantidade)) {
-              totalItens += quantidade;
-            }
+            if (!isNaN(quantidade)) { totalItens += quantidade; }
           });
           renderResultTable();
           renderSummaryTable();
+          renderSummaryTable2();
         },
-        error: function(err) {
-          alert("Erro ao ler o CSV: " + err.message);
-        }
+        error: function(err) { alert("Erro ao ler o CSV: " + err.message); }
       });
     });
 
-    // Renderiza a tabela processada (Planilha 1)
+    // Renderiza a Planilha 1
     function renderResultTable() {
       const tbody = document.querySelector("#resultTable tbody");
       tbody.innerHTML = "";
@@ -173,11 +201,10 @@
       });
     }
 
-    // Renderiza a tabela resumo (Planilha 2)
+    // Renderiza a Tabela Resumo (Novo Código – coluna 4)
     function renderSummaryTable() {
       const tbody = document.querySelector("#summaryTable tbody");
       tbody.innerHTML = "";
-      // Para cada código, cria uma linha
       Object.keys(summaryCounts).sort().forEach(key => {
         const tr = document.createElement("tr");
         tr.innerHTML = `<td>${key}</td><td>${summaryCounts[key]}</td>`;
@@ -189,7 +216,18 @@
       tbody.appendChild(trTotal);
     }
 
-    // Função que converte uma tabela (ID informado) em texto tab-delimitado para cópia
+    // Renderiza a Tabela Resumo 2 (Novo Código 2 – coluna 3)
+    function renderSummaryTable2() {
+      const tbody = document.querySelector("#summaryTable2 tbody");
+      tbody.innerHTML = "";
+      Object.keys(summaryCounts2).sort().forEach(key => {
+        const tr = document.createElement("tr");
+        tr.innerHTML = `<td>${key}</td><td>${summaryCounts2[key]}</td>`;
+        tbody.appendChild(tr);
+      });
+    }
+
+    // Função para converter tabela em texto tab-delimitado (para copiar ao Notion)
     function copyTableText(tableId) {
       const table = document.getElementById(tableId);
       let text = "";
@@ -203,25 +241,27 @@
       return text;
     }
 
-    // Copia a Planilha 1 para o clipboard
+    // Copia Planilha 1 para a área de transferência
     function copyProcessedTable() {
       const text = copyTableText("resultTable");
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Planilha 1 copiada para a área de transferência!");
-      });
+      navigator.clipboard.writeText(text).then(() => { alert("Planilha 1 copiada para a área de transferência!"); });
     }
 
-    // Copia a Planilha 2 (Resumo) para o clipboard
+    // Copia Resumo 1 para o clipboard
     function copySummaryTable() {
       const text = copyTableText("summaryTable");
-      navigator.clipboard.writeText(text).then(() => {
-        alert("Resumo copiado para a área de transferência!");
-      });
+      navigator.clipboard.writeText(text).then(() => { alert("Resumo 1 copiado para a área de transferência!"); });
     }
 
-    // Exporta a Planilha 1 para CSV
+    // Copia Resumo 2 para o clipboard
+    function copySummaryTable2() {
+      const text = copyTableText("summaryTable2");
+      navigator.clipboard.writeText(text).then(() => { alert("Resumo 2 copiado para a área de transferência!"); });
+    }
+
+    // Exporta Planilha 1 para CSV
     function exportCSV() {
-      const header = ["Coluna 1", "Coluna 2", "Coluna 3", "Coluna 4", "Coluna 5", "Coluna 9", "Novo Código"];
+      const header = ["Coluna 1", "Coluna 2", "Coluna 3", "Coluna 4", "Coluna 5", "Coluna 9", "Novo Código", "Novo Código 2"];
       let csvContent = header.join(",") + "\n";
       processedData.forEach(row => {
         const line = row.map(item => `"${item}"`).join(",");
@@ -237,7 +277,7 @@
       document.body.removeChild(a);
     }
 
-    // Exporta a Planilha 1 para XLS (HTML formatado com charset utf-8)
+    // Exporta Planilha 1 para XLS
     function exportXLS() {
       let tableHTML = `
         <table border="1">
@@ -250,14 +290,13 @@
               <th>Coluna 5</th>
               <th>Coluna 9</th>
               <th>Novo Código</th>
+              <th>Novo Código 2</th>
             </tr>
           </thead>
           <tbody>`;
       processedData.forEach(row => {
         tableHTML += "<tr>";
-        row.forEach(item => {
-          tableHTML += "<td>" + item + "</td>";
-        });
+        row.forEach(item => { tableHTML += "<td>" + item + "</td>"; });
         tableHTML += "</tr>";
       });
       tableHTML += `</tbody></table>`;
@@ -271,11 +310,10 @@
       document.body.removeChild(a);
     }
 
-    // Exporta a Tabela Resumo para CSV
+    // Exporta Resumo 1 para CSV
     function exportCSVSummary() {
       const header = ["Código", "Quantidade"];
       let csvContent = header.join(",") + "\n";
-      // Para cada linha do resumo
       const rows = document.querySelectorAll("#summaryTable tbody tr");
       rows.forEach(row => {
         const cols = row.querySelectorAll("td");
@@ -293,7 +331,7 @@
       document.body.removeChild(a);
     }
 
-    // Exporta a Tabela Resumo para XLS (HTML formatado com charset utf-8)
+    // Exporta Resumo 1 para XLS
     function exportXLSSummary() {
       let tableHTML = `
         <table border="1">
@@ -308,9 +346,7 @@
       rows.forEach(row => {
         tableHTML += "<tr>";
         const cells = row.querySelectorAll("td");
-        cells.forEach(cell => {
-          tableHTML += "<td>" + cell.innerText + "</td>";
-        });
+        cells.forEach(cell => { tableHTML += "<td>" + cell.innerText + "</td>"; });
         tableHTML += "</tr>";
       });
       tableHTML += `</tbody></table>`;
@@ -322,6 +358,73 @@
       document.body.appendChild(a);
       a.click();
       document.body.removeChild(a);
+    }
+
+    // Exporta Resumo 2 para CSV
+    function exportCSVSummary2() {
+      const header = ["Tipo", "Quantidade"];
+      let csvContent = header.join(",") + "\n";
+      const rows = document.querySelectorAll("#summaryTable2 tbody tr");
+      rows.forEach(row => {
+        const cols = row.querySelectorAll("td");
+        let arr = [];
+        cols.forEach(td => arr.push(`"${td.innerText}"`));
+        csvContent += arr.join(",") + "\n";
+      });
+      const blob = new Blob(["\ufeff" + csvContent], { type: "text/csv;charset=utf-8;" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "resumo_dados2.csv";
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+    }
+
+    // Exporta Resumo 2 para XLS
+    function exportXLSSummary2() {
+      let tableHTML = `
+        <table border="1">
+          <thead>
+            <tr>
+              <th>Tipo</th>
+              <th>Quantidade</th>
+            </tr>
+          </thead>
+          <tbody>`;
+      const rows = document.querySelectorAll("#summaryTable2 tbody tr");
+      rows.forEach(row => {
+        tableHTML += "<tr>";
+        const cells = row.querySelectorAll("td");
+        cells.forEach(cell => { tableHTML += "<td>" + cell.innerText + "</td>"; });
+        tableHTML += "</tr>";
+      });
+      tableHTML += `</tbody></table>`;
+      const blob = new Blob([tableHTML], { type: "application/vnd.ms-excel;charset=utf-8;" });
+      const url = URL.createObjectURL(blob);
+      const a = document.createElement("a");
+      a.href = url;
+      a.download = "resumo_dados2.xls";
+      document.body.appendChild(a);
+      a.click();
+      document.body.removeChild(a);
+    }
+
+    // Atualiza a Coluna 9 (índice 5 na Planilha 1) conforme seleção e aplica a cor escolhida
+    function updateCol9() {
+      const selectedOption = document.getElementById("col9Option").value;
+      const color = document.getElementById("col9Color").value || "yellow"; // cor padrão se vazio
+      // Itera sobre as linhas da tabela processada
+      const tbody = document.querySelector("#resultTable tbody");
+      for (let row of tbody.rows) {
+        let cell = row.cells[5]; // Coluna 9 (índice 5)
+        if (cell.textContent.toUpperCase().includes(selectedOption.toUpperCase())) {
+          // Atualiza o conteúdo e cor de fundo
+          cell.textContent = selectedOption;
+          cell.style.backgroundColor = color;
+        }
+      }
+      alert("Coluna 9 atualizada!");
     }
   </script>
 </body>
