--- a/index.html
+++ b/index.html
@@ -6,14 +6,68 @@
   <!-- Biblioteca PapaParse para ler CSV -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/PapaParse/5.4.1/papaparse.min.js"></script>
   <style>
-    body { font-family: Arial, sans-serif; margin: 20px; }
-    h2 { margin-top: 30px; }
-    table { border-collapse: collapse; margin-top: 10px; width: 80%; }
-    th, td { border: 1px solid #ccc; padding: 8px; text-align: center; }
-    th { background-color: #f4f4f4; }
-    .container { margin-bottom: 30px; }
-    button { margin-top: 10px; margin-right: 10px; }
-    .update-panel { border: 1px solid #ccc; padding: 10px; width: 80%; margin-bottom: 30px; }
+    body {
+      font-family: Arial, sans-serif;
+      margin: 20px;
+      background-color: #fafafa;
+      color: #333;
+    }
+    h1, h2, h3 {
+      text-align: center;
+      margin-bottom: 15px;
+    }
+    .container, .update-panel {
+      width: 90%;
+      max-width: 960px;
+      margin: auto;
+      margin-bottom: 30px;
+    }
+    table {
+      border-collapse: collapse;
+      width: 100%;
+      margin-top: 10px;
+      overflow-x: auto;
+      display: block;
+    }
+    th, td {
+      border: 1px solid #ccc;
+      padding: 8px;
+      text-align: center;
+      word-break: break-word;
+    }
+    th {
+      background-color: #f4f4f4;
+    }
+    button {
+      margin-top: 10px;
+      margin-right: 10px;
+      padding: 8px 12px;
+      border: none;
+      background-color: #337ab7;
+      color: white;
+      cursor: pointer;
+      border-radius: 4px;
+    }
+    button:hover {
+      background-color: #286090;
+    }
+    input[type="file"],
+    input[type="text"],
+    select {
+      padding: 6px;
+      margin: 5px 0;
+      border: 1px solid #ccc;
+      border-radius: 4px;
+    }
+    @media (max-width: 600px) {
+      th, td {
+        padding: 6px;
+      }
+      button {
+        padding: 6px 10px;
+        font-size: 14px;
+      }
+    }
   </style>
 </head>
 <body>
@@ -42,7 +96,15 @@
         <th>Novo Código 2</th>
       </tr>
     </thead>
-    <tbody></tbody>
+    <tbody>
+      <tr>
+        <td>1</td><td>P01</td><td>ACM-PORTA</td><td>PORTA PIVOTANTE EM ACM</td><td>1700</td><td>PINTURA PRETO FOSCO - RAL9005F</td><td>ACM</td><td>Layer</td>
+      </tr>
+      <tr>
+        <td>2</td><td>AD-2</td><td>REH-JUNÇÃO 90º</td><td>FIXO 02 MODULOS CONJUGADOS EM 90° COM PERFIL NA ESQUINA</td><td>2955</td><td>MAR - CEY - CEY</td><td>Fixo</td><td>PVC</td>
+      </tr>
+      <!-- demais linhas conforme exemplo -->
+    </tbody>
   </table>
 
   <!-- Painel para atualizar a Coluna 9 -->
@@ -161,7 +223,7 @@
           for (let key in summaryCounts2) { delete summaryCounts2[key]; }
           totalItens = 0;
           const rows = results.data;
-          // Processar cada linha (pular linhas com poucos dados)
+          // Processa cada linha (pular linhas com poucos dados)
           rows.forEach(row => {
             if (!row || row.length < 9) return;
             // Mantém as colunas: 1,2,3,4,5,9 (índices: 0,1,2,3,4,8)
@@ -170,11 +232,8 @@
             const codigo2 = getCodigo2(row[2] || "");
             const newRow = selected.concat(codigo, codigo2);
             processedData.push(newRow);
-            // Atualiza contagem do Novo Código (coluna 4)
             if (codigo) { summaryCounts[codigo] = (summaryCounts[codigo] || 0) + 1; }
-            // Atualiza contagem do Novo Código 2 (coluna 3)
             summaryCounts2[codigo2] = (summaryCounts2[codigo2] || 0) + 1;
-            // Soma a quantidade total usando a 8ª coluna (índice 7)
             let quantidade = Number(row[7].replace(",","."));
             if (!isNaN(quantidade)) { totalItens += quantidade; }
           });
@@ -210,7 +269,6 @@
         tr.innerHTML = `<td>${key}</td><td>${summaryCounts[key]}</td>`;
         tbody.appendChild(tr);
       });
-      // Linha para total de itens
       const trTotal = document.createElement("tr");
       trTotal.innerHTML = `<td><strong>Total de Itens</strong></td><td><strong>${totalItens}</strong></td>`;
       tbody.appendChild(trTotal);
@@ -410,17 +468,17 @@
       document.body.removeChild(a);
     }
 
-    // Atualiza a Coluna 9 (índice 5 na Planilha 1) conforme seleção e aplica a cor escolhida
+    // Atualiza a Coluna 9 (índice 5 na Planilha 1) aplicando a cor escolhida,
+    // desde que o conteúdo da célula (desconsiderando espaços) contenha a opção selecionada
     function updateCol9() {
       const selectedOption = document.getElementById("col9Option").value;
       const color = document.getElementById("col9Color").value || "yellow"; // cor padrão se vazio
       const tbody = document.querySelector("#resultTable tbody");
+      const normalizedSelected = selectedOption.toUpperCase().replace(/\s/g, '');
       for (let row of tbody.rows) {
-        let cell = row.cells[5]; // Coluna 9 (índice 5)
-        let cellText = cell.textContent.trim();
-        // Verifica se o conteúdo da célula, sem espaços, é exatamente igual à opção (ignora case)
-        if (cellText.toUpperCase() === selectedOption.toUpperCase()) {
-          cell.textContent = selectedOption;
+        let cell = row.cells[5]; // Coluna 9
+        let normalizedCell = cell.textContent.toUpperCase().replace(/\s/g, '');
+        if (normalizedCell.includes(normalizedSelected)) {
           cell.style.backgroundColor = color;
         }
       }
