--- a/index.html
+++ b/index.html
@@ -487,7 +487,7 @@
       for (let row of tbody.rows) {
         let cell = row.cells[5]; // Coluna 9
         let cellText = cell.textContent.toUpperCase();
-        if (cellText.includes("CEY-") || cellText.includes("ROB")) {
+        if (cellText.includes("CEY") || cellText.includes("ROB")) {
           cell.style.backgroundColor = color;
           console.log("Atualizou célula:", cell.textContent);
         }
